<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CamIn" Id="{c5744af6-86a6-0e11-1fe5-3486d5caab50}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_CamIn :
STRUCT
  MasterOffset      : REAL; 
  SlaveOffset       : REAL; 
  MasterScaling     : REAL;
  SlaveScaling      : REAL;

{IF defined (CAM)}
  {info 'CAMMING active'}
  StartMode         : Tc2_MC2_Camming.MC_CamActivationMode;
  CamTableID        : Tc2_MC2_Camming.MC_CAM_ID;
{ELSE}
  StartMode         : INT;
  CamTableID        : UDINT;
{END_IF}

END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>